yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-api
  name: todo-api
spec:
  ports:
  - name: tcp-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: todo-api
  sessionAffinity: None
  type: ClusterIP
