yaml/servicedb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb-dev
  name: mongodb-dev
spec:
  ports:
  - name: tcp-27017
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongodb-dev
  sessionAffinity: None
  type: ClusterIP
