yaml/routedb.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mongodb-dev
  labels:
    app: mongodb-dev
spec:
  # hostname: foo.apps.CLUSTER.ccs.ornl.gov
  port:
    targetPort: tcp-27017
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: mongodb-dev
    weight: 100
  wildcardPolicy: None
